Fix wrangler config: add exclude patterns for assets

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -2,6 +2,7 @@
     "name": "cocoguard-web",
     "compatibility_date": "2026-02-18",
     "assets": {
-        "directory": "./"
+        "directory": "./",
+        "exclude": [".git", ".wrangler", "node_modules", "*.md", "wrangler.jsonc", ".assetsignore", ".gitignore"]
     }
 }
